--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
